75 Types are now its own class